force-app/main/default/objects/ServiceAppointment/fields/Access_Details__c.field-meta.xml
<CustomField>
    <fullName>Access_Details__c</fullName>
    <formula>FSSK__FSK_Work_Order__r.Asset.Access_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Details</label>
    <type>Text</type>
</CustomField>