force-app/main/default/objects/ServiceAppointment/fields/Actual_Hours_exceed_Max_Labour_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_exceed_Max_Labour_Hours__c</fullName>
    <formula>IF( ActualDuration &gt;  WorkType.Max_Labour__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Hours exceed Max Labour Hours</label>
    <type>Checkbox</type>
</CustomField>