force-app/main/default/objects/ServiceAppointment/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;  FSSK__FSK_Work_Order__r.Asset.Id ,  FSSK__FSK_Work_Order__r.Asset.Name , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset</label>
    <type>Text</type>
</CustomField>