force-app/main/default/objects/ServiceAppointment/fields/Comp_Key__c.field-meta.xml
<CustomField>
    <fullName>Comp_Key__c</fullName>
    <formula>FSSK__FSK_Work_Order__r.Asset.Comp_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comp Key</label>
    <type>Text</type>
</CustomField>