force-app/main/default/objects/ServiceAppointment/fields/Confined_space_entry__c.field-meta.xml
<CustomField>
    <fullName>Confined_space_entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confined space entry</label>
    <type>Checkbox</type>
</CustomField>