force-app/main/default/objects/ServiceAppointment/fields/Crew_out_of_confined_space__c.field-meta.xml
<CustomField>
    <fullName>Crew_out_of_confined_space__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crew out of confined space</label>
    <type>Checkbox</type>
</CustomField>