force-app/main/default/objects/ServiceAppointment/fields/Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Detail__c</fullName>
    <formula>IF( (Dialysis_Patient__c &amp;&amp; Key_Customer__c = True), &quot;Dialysis Patient/Key Customer&quot;,
IF( (Dialysis_Patient__c = True), &quot;Dialysis Patient&quot;,
IF( (Dialysis_Patient__c &amp;&amp; Key_Customer__c = False), &quot;&quot;,
IF( (Key_Customer__c = True), &quot;Key Customer&quot;, &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Detail</label>
    <type>Text</type>
</CustomField>