force-app/main/default/objects/ServiceAppointment/fields/Customer_Notified__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Notified</label>
    <type>Checkbox</type>
</CustomField>