force-app/main/default/objects/ServiceAppointment/fields/Dialysis_Patient__c.field-meta.xml
<CustomField>
    <fullName>Dialysis_Patient__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-93</description>
    <formula>FSSK__FSK_Work_Order__r.Dialysis_Patient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dialysis Patient</label>
    <type>Checkbox</type>
</CustomField>