force-app/main/default/objects/ServiceAppointment/fields/Expected_time_going_in_confined_space__c.field-meta.xml
<CustomField>
    <fullName>Expected_time_going_in_confined_space__c</fullName>
    <label>Expected time going in confined space</label>
    <type>DateTime</type>
</CustomField>