force-app/main/default/objects/ServiceAppointment/fields/Expected_time_out_of_confined_space__c.field-meta.xml
<CustomField>
    <fullName>Expected_time_out_of_confined_space__c</fullName>
    <label>Expected time out of confined space</label>
    <type>DateTime</type>
</CustomField>