force-app/main/default/objects/ServiceAppointment/fields/Flat__c.field-meta.xml
<CustomField>
    <fullName>Flat__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-93</description>
    <label>Flat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>