force-app/main/default/objects/ServiceAppointment/fields/Group_nearby_appointments__c.field-meta.xml
<CustomField>
    <fullName>Group_nearby_appointments__c</fullName>
    <formula>IF(WorkType.Name = &apos;Planned Meter Replacements&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group nearby appointments</label>
    <type>Checkbox</type>
</CustomField>