force-app/main/default/objects/ServiceAppointment/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <formula>FSSK__FSK_Work_Order__r.Group_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Number</label>
    <type>Text</type>
</CustomField>