force-app/main/default/objects/ServiceAppointment/fields/How_long_will_it_take__c.field-meta.xml
<CustomField>
    <fullName>How_long_will_it_take__c</fullName>
    <description>If the job needs to be extended add the time.</description>
    <label>How long will it take?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>