force-app/main/default/objects/ServiceAppointment/fields/Inline_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Inline_Due_Date__c</fullName>
    <description>Due date field to be edited inline. The standard due date cannot be edited. https://watercarestp.atlassian.net/browse/MSRS-162</description>
    <label>Edited Due Date</label>
    <type>Date</type>
</CustomField>