force-app/main/default/objects/ServiceAppointment/fields/Job_Notes__c.field-meta.xml
<CustomField>
    <fullName>Job_Notes__c</fullName>
    <label>Job Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>