force-app/main/default/objects/ServiceAppointment/fields/Key_Customer__c.field-meta.xml
<CustomField>
    <fullName>Key_Customer__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-93</description>
    <formula>FSSK__FSK_Work_Order__r.Key_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Customer</label>
    <type>Checkbox</type>
</CustomField>