force-app/main/default/objects/ServiceAppointment/fields/Letter_Drop__c.field-meta.xml
<CustomField>
    <fullName>Letter_Drop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://watercarestp.atlassian.net/browse/MSRS-162</description>
    <label>Letter Drop</label>
    <type>Checkbox</type>
</CustomField>