force-app/main/default/objects/ServiceAppointment/fields/Letter_Drop_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_Drop_Date__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-162</description>
    <label>Letter Drop Date</label>
    <type>Date</type>
</CustomField>