force-app/main/default/objects/ServiceAppointment/fields/MSN_Actual_Travel_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>MSN_Actual_Travel_Time_Minutes__c</fullName>
    <description>Used in reporting to calculate the &quot;Actual Traveltime&quot; for each Service Appointment. The calculation is based on the &quot;Actual Start&quot; date/time and the  &quot;Travel Start&quot; date/time and returns the result in minutes.</description>
    <formula>( ActualStartTime  -  MSN_TravelStart__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Travel Time is calculated from &quot;Travel Start&quot; to &quot;Actual Start&quot; (=Onsite).</inlineHelpText>
    <label>Actual Travel Time (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>