force-app/main/default/objects/ServiceAppointment/fields/MSN_AssignedServiceResource_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_AssignedServiceResource_Name__c</fullName>
    <description>Used to show the Name of the assigned Service Resource in the Field Service Mobile App on the Work Step (aka Spot Question) &quot;Crew Id&quot; as a prepopulated value. Please Note: this is required as the mobile app cannot retrieve the field &quot;Name&quot; from the Assigned Service Resource lookup field and would only show the Record Id instead.</description>
    <formula>FSSK__FSK_Assigned_Service_Resource__r.Name</formula>
    <label>Assigned Service Resource - Name</label>
    <type>Text</type>
</CustomField>