force-app/main/default/objects/ServiceAppointment/fields/MSN_AutoSchedule_from_WorkType__c.field-meta.xml
<CustomField>
    <fullName>MSN_AutoSchedule_from_WorkType__c</fullName>
    <description>Used to determine if a Service Appointment is supposed to be &quot;auto-scheduled&quot; as defined in its parent &quot;Work Type&quot; record.</description>
    <formula>WorkType.MSN_AutoSchedule_ServiceAppointment__c</formula>
    <inlineHelpText>This shows whether auto-scheduling is defined on the Work Type of this Service Appointment.</inlineHelpText>
    <label>Auto-Schedule from Work Type</label>
    <type>Checkbox</type>
</CustomField>