force-app/main/default/objects/ServiceAppointment/fields/MSN_Incompletion_Reason__c.field-meta.xml
<CustomField>
    <fullName>MSN_Incompletion_Reason__c</fullName>
    <description>Describes the reason, why a Service Appointment could not be completed (in case the Field Crew sets the status to &quot;Cannot Complete&quot;)</description>
    <label>Incompletion Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diverted to P1/P2</fullName>
            </value>
            <value>
                <fullName>Cannot access site</fullName>
            </value>
            <value>
                <fullName>Requires further planning/resource</fullName>
            </value>
            <value>
                <fullName>Sick/Injured/Family needs</fullName>
            </value>
            <value>
                <fullName>Shift end</fullName>
            </value>
            <value>
                <fullName>Job on hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>