force-app/main/default/objects/ServiceAppointment/fields/MSN_Labour_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>MSN_Labour_Time_Minutes__c</fullName>
    <description>Calculates the &quot;Billable Labour Time&quot; for each Service Appointment. The calculation is based on the &quot;Travel Start&quot; date/time to the  &quot;Actual End&quot; date/time and returns the result in minutes.This is then used to create &quot;Labour Lines&quot; (=Products consumed of the type &quot;Labour&quot;) and sent to EAM via the Integration.</description>
    <formula>( ActualEndTime  -  MSN_TravelStart__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Billable labour time is calculated from &quot;Travel Start&quot; to &quot;Actual End&quot;.</inlineHelpText>
    <label>Labour Time (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>