force-app/main/default/objects/ServiceAppointment/fields/MSN_No_of_Claim_Lines__c.field-meta.xml
<CustomField>
    <fullName>MSN_No_of_Claim_Lines__c</fullName>
    <description>This field is used to accommodate the requirements of the &quot;Subcontractor Claims&quot; process that requires &quot;No. of lines&quot; as a column in the claims upload template in order to import claims into EAM. It is used in a column of the Subcontractor Claims report.</description>
    <label>No. of Lines</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>