force-app/main/default/objects/ServiceAppointment/fields/MSN_Onsite_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>MSN_Onsite_Response_Time__c</fullName>
    <description>Used for KPI Reporting. Calculates the Response time from &quot;Created Date&quot; of a Service Appointment to &quot;Actual Start&quot; (= Onsite)</description>
    <formula>(ActualStartTime - FSSK__FSK_Work_Order__r.CreatedDate)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onsite Response Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>