force-app/main/default/objects/ServiceAppointment/fields/MSN_Previous_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>MSN_Previous_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link the Service Appointment to a previous, incomplete one when a Field Crew sets an appointment to &quot;cannot complete&quot; and a new &quot;revisit&quot; appointment is created.</description>
    <inlineHelpText>Links to a previous Service Appointment for the same Work Order, that could not be completed by the field crew</inlineHelpText>
    <label>Previous Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Previous Service Appointment</relationshipLabel>
    <relationshipName>Previous_Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>