force-app/main/default/objects/ServiceAppointment/fields/MSN_Revisit__c.field-meta.xml
<CustomField>
    <fullName>MSN_Revisit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates, whether a Service Appointment is a followup or additional Appointment to a Work Order, e.g. when a previous Service Appointment could not be completed and needs additional work.</description>
    <inlineHelpText>Indicates whether this Service Appointment is a follow-up for a previous, uncompleted job.</inlineHelpText>
    <label>Revisit</label>
    <type>Checkbox</type>
</CustomField>