force-app/main/default/objects/ServiceAppointment/fields/MSN_ServiceTerritory_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_ServiceTerritory_Name__c</fullName>
    <description>This cross object formula is used to retrieve the &quot;Name&quot; of the Service Territory in order to show it in data table elements of flows to the user - e.g. in the Work Completed Review flow.</description>
    <formula>ServiceTerritory.Name</formula>
    <label>Service Territory - Name</label>
    <type>Text</type>
</CustomField>