force-app/main/default/objects/ServiceAppointment/fields/MSN_SubcontractorClaims_Notes__c.field-meta.xml
<CustomField>
    <fullName>MSN_SubcontractorClaims_Notes__c</fullName>
    <description>Used in the Subcontractor Claims process for the sucontractor to fill in and record some additional Notes for each claim item/work order</description>
    <label>Claim notes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>