force-app/main/default/objects/ServiceAppointment/fields/MSN_SubcontractorClaims_ProForma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>MSN_SubcontractorClaims_ProForma_Invoice__c</fullName>
    <description>The &quot;Pro Forma Invoice Number&quot; is used in the subcontractor claims process upload report/template. It is supposed to be prepopulated in a certain format as soft enforcement of standards, to keep the &quot;proforma&quot; invoice numbers across contractors/subcontractors consistent. For Example: WSL-MSN-2021-11-HYDROTECH-300</description>
    <inlineHelpText>Please enter the pro forma invoice number in the following format: WSL-MSN-YYYY-MM-SUBCONTRACTORNAME-CLAIMNUMBER</inlineHelpText>
    <label>Pro Forma Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>