force-app/main/default/objects/ServiceAppointment/fields/MSN_SubcontractorClaims_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MSN_SubcontractorClaims_Quantity__c</fullName>
    <description>Used in the Subcontractor Claims process and filled in by the subcontractor together with the &quot;Unit Rate&quot; to specify the quantity of the services they carried out.</description>
    <label>Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>