force-app/main/default/objects/ServiceAppointment/fields/MSN_SubcontractorClaims_Unit__c.field-meta.xml
<CustomField>
    <fullName>MSN_SubcontractorClaims_Unit__c</fullName>
    <description>Used in the Subcontractor Claims process and is filled in by the subcontractor together with the Unit Rate and the Quantity to specify the unit of measure of the claim item. For example &quot;Each&quot;.</description>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>