force-app/main/default/objects/ServiceAppointment/fields/MSN_SubcontractorClaims_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>MSN_SubcontractorClaims_Unit_Rate__c</fullName>
    <description>Used in the Subcontractor Claims process, where subcontractors download a report in Salesforce and fill in missing details such as the agreed &quot;Unit Rate&quot; for each of the Work Orders they have completed.</description>
    <label>Unit Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>