force-app/main/default/objects/ServiceAppointment/fields/MSN_TKS_TRANS__c.field-meta.xml
<CustomField>
    <fullName>MSN_TKS_TRANS__c</fullName>
    <defaultValue>&quot;SFPO&quot;</defaultValue>
    <description>This field is used to accomodate the requirements of the &quot;Subcontractor Claims&quot; process that requires TKD_TRANS as a column in the claims upload template in order to import claims into EAM. It is used in a column of the Subcontractor Claims report.</description>
    <label>TKD_TRANS</label>
    <length>4</length>
    <type>Text</type>
</CustomField>