force-app/main/default/objects/ServiceAppointment/fields/MSN_Total_AssignedServiceResources__c.field-meta.xml
<CustomField>
    <fullName>MSN_Total_AssignedServiceResources__c</fullName>
    <description>This field is used to count the total amount of assigned resources to this Service Appointment. This is used e.g. in the flow &quot;Work Complete Review&quot; to show the user a preview on how many &quot;Labour Lines&quot; are going to be created after they completed the review process.</description>
    <inlineHelpText>Shows the total count of Crew Members assigned to this Service Appointment. When assigning a job to a Crew this could be greater than 1.</inlineHelpText>
    <label># Assigned Service Resources</label>
    <summaryForeignKey>AssignedResource.ServiceAppointmentId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>