force-app/main/default/objects/ServiceAppointment/fields/MSN_TravelStart__c.field-meta.xml
<CustomField>
    <fullName>MSN_TravelStart__c</fullName>
    <description>Used to capture the Date/Time when a field crew starts travelling to a Service Appointments (=updates the field &quot;Status&quot; on Service Appointment to &quot;Travel&quot; via the FSL Mobile App)</description>
    <label>Travel Start</label>
    <type>DateTime</type>
</CustomField>