force-app/main/default/objects/ServiceAppointment/fields/Name_of_crew_entering_confined_space__c.field-meta.xml
<CustomField>
    <fullName>Name_of_crew_entering_confined_space__c</fullName>
    <label>Name of crew entering confined space</label>
    <length>255</length>
    <type>Text</type>
</CustomField>