force-app/main/default/objects/ServiceAppointment/fields/Name_of_crew_on_standby__c.field-meta.xml
<CustomField>
    <fullName>Name_of_crew_on_standby__c</fullName>
    <label>Name of crew on standby</label>
    <length>255</length>
    <type>Text</type>
</CustomField>