force-app/main/default/objects/ServiceAppointment/fields/Name_of_crew_watching__c.field-meta.xml
<CustomField>
    <fullName>Name_of_crew_watching__c</fullName>
    <label>Name of crew watching</label>
    <length>255</length>
    <type>Text</type>
</CustomField>