force-app/main/default/objects/ServiceAppointment/fields/Needs_Traffic_Management__c.field-meta.xml
<CustomField>
    <fullName>Needs_Traffic_Management__c</fullName>
    <formula>FSSK__FSK_Work_Order__r.Asset.Needs_Traffic_Management__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Traffic Management</label>
    <type>Checkbox</type>
</CustomField>