force-app/main/default/objects/ServiceAppointment/fields/Phone_number_of_crew_on_standby__c.field-meta.xml
<CustomField>
    <fullName>Phone_number_of_crew_on_standby__c</fullName>
    <label>Phone number of crew on standby</label>
    <length>255</length>
    <type>Text</type>
</CustomField>