force-app/main/default/objects/ServiceAppointment/fields/Planned_Work__c.field-meta.xml
<CustomField>
    <fullName>Planned_Work__c</fullName>
    <formula>IF(ISPICKVAL(WorkType.MSN_TypeOfWork__c, &quot;Planned&quot;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Work</label>
    <type>Checkbox</type>
</CustomField>