force-app/main/default/objects/ServiceAppointment/fields/Powerapps__c.field-meta.xml
<CustomField>
    <fullName>Powerapps__c</fullName>
    <defaultValue>&quot;https://powerapps.microsoft.com/en-us/&quot;</defaultValue>
    <label>Powerapps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>