force-app/main/default/objects/ServiceAppointment/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
            <value>
                <fullName>P6</fullName>
            </value>
            <value>
                <fullName>P7</fullName>
            </value>
            <value>
                <fullName>P8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>