force-app/main/default/objects/ServiceAppointment/fields/Re_Instatement_required__c.field-meta.xml
<CustomField>
    <fullName>Re_Instatement_required__c</fullName>
    <label>Re-Instatement required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>