force-app/main/default/objects/ServiceAppointment/fields/Reactive_work__c.field-meta.xml
<CustomField>
    <fullName>Reactive_work__c</fullName>
    <formula>IF(ISPICKVAL(WorkType.MSN_TypeOfWork__c, &quot;Reactive&quot;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reactive work</label>
    <type>Checkbox</type>
</CustomField>