force-app/main/default/objects/ServiceAppointment/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <formula>DATEVALUE(SchedStartTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>