force-app/main/default/objects/ServiceAppointment/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <formula>FSSK__FSK_Work_Order__r.Serial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>