force-app/main/default/objects/ServiceAppointment/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <formula>TEXT(WorkType.Service_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Area</label>
    <type>Text</type>
</CustomField>