force-app/main/default/objects/ServiceAppointment/fields/SideOfStreet__c.field-meta.xml
<CustomField>
    <fullName>SideOfStreet__c</fullName>
    <description>Which side of the street the house is on, by Street Number</description>
    <label>Side Of Street</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Odd</fullName>
            </value>
            <value>
                <fullName>Even</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>