force-app/main/default/objects/ServiceAppointment/fields/Size_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Asset__c</fullName>
    <formula>FSSK__FSK_Work_Order__r.Asset.Size_of_Asset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size of Asset</label>
    <type>Text</type>
</CustomField>