force-app/main/default/objects/ServiceAppointment/fields/Subcontractor_not_in_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_not_in_Salesforce__c</fullName>
    <formula>ServiceTerritory.Subcontractor_not_using_Salesforce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subcontractor not in Salesforce</label>
    <type>Checkbox</type>
</CustomField>