force-app/main/default/objects/ServiceAppointment/fields/Subcontractor_using_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_using_Salesforce__c</fullName>
    <formula>ServiceTerritory.Subcontractor_using_Salesforce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subcontractor using Salesforce</label>
    <type>Checkbox</type>
</CustomField>