force-app/main/default/objects/ServiceAppointment/fields/Type_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work__c</fullName>
    <formula>Text(WorkType.MSN_TypeOfWork__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Work</label>
    <type>Text</type>
</CustomField>