force-app/main/default/objects/ServiceAppointment/fields/Water_On_Off_Status__c.field-meta.xml
<CustomField>
    <fullName>Water_On_Off_Status__c</fullName>
    <formula>TEXT(FSSK__FSK_Work_Order__r.Water_On_Off_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Water On/Off Status</label>
    <type>Text</type>
</CustomField>