force-app/main/default/objects/ServiceAppointment/validationRules/EditedDueDate_greater_EarliestStartTime.validationRule-meta.xml
<ValidationRule>
    <fullName>EditedDueDate_greater_EarliestStartTime</fullName>
    <active>false</active>
    <description>The custom field &quot;Edited Due Date&quot; must be greater than the &quot;Earliest Start Time Permitted&quot;,</description>
    <errorConditionFormula>DATETIMEVALUE(Inline_Due_Date__c) &lt; EarliestStartTime</errorConditionFormula>
    <errorMessage>&quot;Edited Due Date&quot; cannot be earlier than &quot;Earliest Start Permitted&quot;</errorMessage>
</ValidationRule>