force-app/main/default/objects/ServiceAppointment/listViews/All_Open_Reinstatement_Jobs_Topsoil.listView-meta.xml
<ListView>
    <fullName>All_Open_Reinstatement_Jobs_Topsoil</fullName>
    <columns>Name</columns>
    <columns>FSL__Auto_Schedule__c</columns>
    <columns>Status</columns>
    <columns>Inline_Due_Date__c</columns>
    <columns>EstDuration</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>STREET</columns>
    <columns>CITY</columns>
    <columns>CreatedDate</columns>
    <columns>FSSK__FSK_Assigned_Service_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkType</field>
        <operation>equals</operation>
        <value>Reinstatement - Perm Topsoil</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Completed,Cannot Complete,Canceled</value>
    </filters>
    <label>All Open Reinstatement Jobs - Topsoil</label>
</ListView>